@@ -3,7 +3,8 @@
 == Version 0.5.16 (SVN)
 Release summary goes here...
 
-* Test::UnitMigrator now defines converted helper methods outside of the setup block.
+* Added failure_message to RSpec Rake task
+* test2spec now defines converted helper methods outside of the setup block.
 
 == Version 0.5.15
 This release removes a prematurely added feature that shouldn't have been added.
